rnsc/test_data/rns_integration/error/parser/type_hints/float/not_f32.rns
.class @float identifier
.super java/lang/Object
